--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -428,7 +428,7 @@ node_types:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role-fastconfig:
-        file: indigo-dc.galaxycloud-fastconfig
+        file: indigo-dc.galaxycloud-fastconfig,devel
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
