--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1285,6 +1285,12 @@ node_types:
       marathon_password:
         type: string
         required: yes
+      cms_proxycache_token_manager:
+        type: string
+        required: yes
+      master_ips:
+        required: yes
+        type: list
       onedatatoken:
         type: string
         required: no
@@ -1302,7 +1308,7 @@ node_types:
           inputs:
             cms_config_mysquid_host: { get_property: [ SELF, mysquid_host ] }
             cms_config_proxycache_host: { get_property: [ SELF, proxycache_host ] }
-            cms_config_iamtoken: { get_property: [ SELF, iam_access_token ] }
+            cms_config_iam_token: { get_property: [ SELF, iam_access_token ] }
             cms_config_iam_client_id: { get_property: [ SELF, iam_client_id ] }
             cms_config_iam_client_secret: { get_property: [ SELF, iam_client_secret ] }
             cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
@@ -1313,6 +1319,8 @@ node_types:
             cms_config_onedatatoken: { get_property: [ SELF, onedatatoken ] }
             marathon_user: { get_property: [ SELF, marathon_username ] }
             marathon_pass: { get_property: [ SELF, marathon_password ] }
+            zookeeper_host_list: { get_property: [ SELF, master_ips ] }            
+            proxy_cache_manager: { get_property: [ SELF, cms_proxycache_token_manager ] }
     requirements:
       - host:
           capability: tosca.capabilities.indigo.MesosMaster
