--- a/examples/galaxy_elixirIT_fastconfig.yaml
+++ b/examples/galaxy_elixirIT_fastconfig.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro/custom_types.yaml
 
 description: >
   TOSCA test for launching a Galaxy Server also configuring the bowtie2
@@ -134,6 +134,7 @@ topology_template:
         instance_description: { get_input: instance_description }
         instance_key_pub: { get_input: instance_key_pub }
         export_dir: { get_input: export_dir }
+        flavor: { get_input: flavor }
       requirements:
         - lrms: local_lrms
 
