--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -442,7 +442,7 @@ node_types:
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role-fastconfig:
         file: indigo-dc.galaxycloud-fastconfig
-        type: tosca.artifacts.AnsibleGalaxy.role
+        type: tosca.artifacts.AnsibleGalaxy.role,devel
     interfaces:
       Standard:
         configure:
