--- a/artifacts/lrms/kubernetes/kube_wn_install.yml
+++ b/artifacts/lrms/kubernetes/kube_wn_install.yml
@@ -12,7 +12,7 @@
     when: wn_hybrid_cluster
   - role: indigo-dc.nfs
     nfs_mode: 'client'
-    nfs_client_imports: [{ local: "/pv", remote: "/pv", server_host: "{{ slurm_front_end_ip }}" }]
+    nfs_client_imports: [{ local: "/pv", remote: "/pv", server_host: "{{ kube_front_end_ip }}" }]
     when: not wn_hybrid_cluster
   - role: 'grycap.kubernetes'
     kube_type_of_node: 'wn'
