--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1,5 +1,15 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
+metadata:
+  template_name: indigo-types
+  template_version: 1.0.0
+  template_author: indigo
+
+imports:
+  - tosca-normative-types:1.0.0-ALIEN14
+
+description: The INDIGO Custom types
+
 capability_types:
 
   tosca.capabilities.indigo.OperatingSystem:
@@ -1780,54 +1790,3 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ophidia/ophidia_io_install.yml
           inputs:
             ophidia_server_ip: { get_property: [ SELF, server_ip ] }
-
-  tosca.nodes.indigo.Batch.Job:
-    derived_from: tosca.nodes.Root
-    properties:
-      executable:
-        required: yes
-        type: string
-        description: Name of the executable file
-      arguments:
-        required: no
-        type: string
-        description: Arguments for the job executable
-      environment:
-        type: map
-        entry_schema:
-          type: string
-        description: A map of string representing environment settings
-
-# https://wiki.italiangrid.it/twiki/bin/view/CREAM/JdlGuide
-  tosca.nodes.indigo.Grid.Job:
-    derived_from: tosca.nodes.indigo.Batch.Job
-    properties:
-      ce_urls:
-        required: yes
-        type: list
-        entry_schema:
-          type: string
-        description: A list of CREAM CE identifiers to launch the job
-      stdoutput:
-        required: no
-        description: Name of the file to get the standard output stream of the user application
-        type: string
-      stderror:
-        required: no
-        type: string
-        description: Name of the file to get the standard error stream of the user application
-      outputsandbox:
-        type: list
-        entry_schema:
-          type: string
-        description: A list of output sandbox files
-      inputsandbox:
-        type: list
-        entry_schema:
-          type: string
-        description: A list of input sandbox files (URL of files located in gridFTP servers)
-      virtualorganisation:
-        required: no
-        type: string
-        description: Specify the VO of the user
-
