--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -10,6 +10,43 @@ imports:
 
 description: The INDIGO Custom types
 
+data_types:
+
+  tosca.datatypes.Root:
+    description: >
+      The TOSCA root Data Type all other TOSCA base Data Types derive from
+
+  tosca.datatypes.network.PortDef:
+    derived_from: integer
+    constraints:
+      - in_range: [ 1, 65535 ]
+
+  tosca.datatypes.network.PortSpec:
+    derived_from: tosca.datatypes.Root
+    properties:
+      protocol:
+        type: string
+        required: true
+        default: tcp
+        constraints:
+          - valid_values: [ udp, tcp, igmp ]
+      target:
+        type: tosca.datatypes.network.PortDef
+        required: false
+      target_range:
+        type: range
+        required: false
+        constraints:
+          - in_range: [ 1, 65535 ]
+      source:
+        type: tosca.datatypes.network.PortDef
+        required: false
+      source_range:
+        type: range
+        required: false
+        constraints:
+          - in_range: [ 1, 65535 ]
+
 capability_types:
 
   tosca.capabilities.Container.Docker:
@@ -330,7 +367,7 @@ node_types:
         required: no
         default: orchestrator.cloud.cnaf.infn.it
       zabbix_server_port:
-        type: integer
+        type: tosca.datatypes.network.PortDef
         required: no
         default: 10051
       zabbix_server_metadata:
@@ -1009,8 +1046,14 @@ node_types:
       scalable:
         type: tosca.capabilities.Scalable
 
+  tosca.nodes.Container.Application.Docker:
+    derived_from: tosca.nodes.Container.Application
+    requirements:
+      - host:
+          capability: tosca.capabilities.Container.Docker
+
   tosca.nodes.indigo.Container.Application.Docker:
-    derived_from: tosca.nodes.Container.Application.Docker
+    derived_from:   
     properties:
       command:
         required: no
