--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -12,10 +12,7 @@ description: The INDIGO Custom types
 
 data_types:
 
-  tosca.datatypes.Root:
-    description: >
-      The TOSCA root Data Type all other TOSCA base Data Types derive from
-
+  # These types can be added inthe normative types
   tosca.datatypes.network.PortDef:
     derived_from: integer
     constraints:
