--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1893,3 +1893,10 @@ node_types:
             fe_hybrid_cluster:  { get_property: [ SELF, hybrid] }
             kube_admin_username:  { get_property: [ SELF, admin_username] }
             kube_admin_token:  { get_property: [ SELF, admin_token] }
+
+  tosca.nodes.indigo.JupyterHubKube:
+    derived_from: tosca.nodes.SoftwareComponent
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/jupyter/jupyter_kubespawner_install.yml
