--- a/examples/kubernetes_cluster.yaml
+++ b/examples/kubernetes_cluster.yaml
@@ -100,8 +100,8 @@ topology_template:
             #version: 16.04
 
   outputs:
-    galaxy_url:
-      value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], '/galaxy' ] }
+    dashboard_url:
+      value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], ':6443/ui' ] }
     cluster_ip:
       value: { get_attribute: [ lrms_server, public_address, 0 ] }
     cluster_creds:
