--- a/artifacts/jupyter/jupyter_kubespawner_install.yml
+++ b/artifacts/jupyter/jupyter_kubespawner_install.yml
@@ -2,6 +2,8 @@
 - hosts: localhost
   connection: local
   tasks:
+    - pip: name=docker-py
+
     - name: Jupyterhub-kubespawner container
       docker_container:
         name: jupyterhub
