--- a/extra_normative_types.yaml
+++ b/extra_normative_types.yaml
@@ -8,7 +8,7 @@ metadata:
 imports:
   - tosca-normative-types:1.0.0-ALIEN14
 
-description: The INDIGO Custom types
+description: Normative types node not defined in A4C tosca-normative-types
 
 data_types:
 
