--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1,104 +1,17 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 metadata:
-  template_name: indigo-types
+  template_name: indigo-custom-types
   template_version: 1.0.0
   template_author: indigo
 
 imports:
   - tosca-normative-types:1.0.0-ALIEN14
+  - extra-normative-types:1.0.0
 
-description: The INDIGO Custom types
-
-data_types:
-
-  # These types can be added inthe normative types
-  tosca.datatypes.network.PortDef:
-    derived_from: integer
-    constraints:
-      - in_range: [ 1, 65535 ]
-
-  tosca.datatypes.network.PortSpec:
-    derived_from: tosca.datatypes.Root
-    properties:
-      protocol:
-        type: string
-        required: true
-        default: tcp
-        constraints:
-          - valid_values: [ udp, tcp, igmp ]
-      target:
-        type: tosca.datatypes.network.PortDef
-        required: false
-      target_range:
-        type: range
-        required: false
-        constraints:
-          - in_range: [ 1, 65535 ]
-      source:
-        type: tosca.datatypes.network.PortDef
-        required: false
-      source_range:
-        type: range
-        required: false
-        constraints:
-          - in_range: [ 1, 65535 ]
+description: Normative types node not defined in A4C tosca-normative-types
 
 capability_types:
-
-  tosca.capabilities.Container.Docker:
-    derived_from: tosca.capabilities.Container
-    properties:
-      version:
-        type: list
-        required: false
-        entry_schema:
-          type: version
-        description: >
-          The Docker version capability.
-      publish_all:
-        type: boolean
-        default: false
-        required: false
-        description: >
-          Indicates that all ports (ranges) listed in the dockerfile
-          using the EXPOSE keyword be published.
-      publish_ports:
-        type: list
-        entry_schema:
-          type: tosca.datatypes.network.PortSpec
-        required: false
-        description: >
-          List of ports mappings from source (Docker container)
-          to target (host) ports to publish.
-      expose_ports:
-        type: list
-        entry_schema:
-          type: tosca.datatypes.network.PortSpec
-        required: false
-        description: >
-          List of ports mappings from source (Docker container) to expose
-          to other Docker containers (not accessible outside host).
-      volumes:
-        type: list
-        entry_schema:
-          type: string
-        required: false
-        description: >
-          The dockerfile VOLUME command which is used to enable access
-          from the Docker container to a directory on the host machine.
-      host_id:
-        type: string
-        required: false
-        description: >
-            The optional identifier of an existing host resource
-            that should be used to run this container on.
-      volume_id:
-        type: string
-        required: false
-        description: >
-          The optional identifier of an existing storage volume (resource)
-          that should be used to create the container's mount point(s) on.
 
   tosca.capabilities.indigo.OperatingSystem:
     derived_from: tosca.capabilities.OperatingSystem
@@ -150,7 +63,7 @@ capability_types:
         type: string
         required: true
         constraints:
-        - valid_values: [ local, torque, slurm, sge, condor, mesos ]
+        - valid_values: [ local, torque, slurm, sge, condor, mesos, kubernetes ]
 
   tosca.capabilities.indigo.LRMS.Torque:
     derived_from: tosca.capabilities.indigo.LRMS
@@ -171,6 +84,16 @@ capability_types:
         default: slurm
         constraints:
           - equal: slurm
+
+  tosca.capabilities.indigo.LRMS.Kubernetes:
+    derived_from: tosca.capabilities.indigo.LRMS
+    properties:
+      type:
+        type: string
+        required: true
+        default: kubernetes
+        constraints:
+          - equal: kubernetes
 
   tosca.capabilities.indigo.LRMS.Local:
     derived_from: tosca.capabilities.indigo.LRMS
@@ -1043,12 +966,6 @@ node_types:
       scalable:
         type: tosca.capabilities.Scalable
 
-  tosca.nodes.Container.Application.Docker:
-    derived_from: tosca.nodes.Container.Application
-    requirements:
-      - host:
-          capability: tosca.capabilities.Container.Docker
-
   tosca.nodes.indigo.Container.Application.Docker:
     derived_from: tosca.nodes.Container.Application.Docker
     properties:
@@ -1888,3 +1805,133 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ophidia/ophidia_io_install.yml
           inputs:
             ophidia_server_ip: { get_property: [ SELF, server_ip ] }
+
+  tosca.nodes.indigo.Batch.Job:
+    derived_from: tosca.nodes.Root
+    properties:
+      executable:
+        required: yes
+        type: string
+        description: Name of the executable file
+      arguments:
+        required: no
+        type: string
+        description: Arguments for the job executable
+      environment:
+        type: map
+        entry_schema:
+          type: string
+        description: A map of string representing environment settings
+
+# https://wiki.italiangrid.it/twiki/bin/view/CREAM/JdlGuide
+  tosca.nodes.indigo.Grid.Job:
+    derived_from: tosca.nodes.indigo.Batch.Job
+    properties:
+      ce_urls:
+        required: yes
+        type: list
+        entry_schema:
+          type: string
+        description: A list of CREAM CE identifiers to launch the job
+      stdoutput:
+        required: no
+        description: Name of the file to get the standard output stream of the user application
+        type: string
+      stderror:
+        required: no
+        type: string
+        description: Name of the file to get the standard error stream of the user application
+      outputsandbox:
+        type: list
+        entry_schema:
+          type: string
+        description: A list of output sandbox files
+      inputsandbox:
+        type: list
+        entry_schema:
+          type: string
+        description: A list of input sandbox files (URL of files located in gridFTP servers)
+      virtualorganisation:
+        required: no
+        type: string
+        description: Specify the VO of the user
+
+  tosca.nodes.indigo.LRMS.WorkerNode.Kubernetes:
+    derived_from: tosca.nodes.indigo.LRMS.WorkerNode
+    artifacts:
+      kube_role:
+        file: grycap.kubernetes
+        type: tosca.artifacts.AnsibleGalaxy.role
+      nfs_role:
+        file: indigo-dc.nfs
+        type: tosca.artifacts.AnsibleGalaxy.role
+      openvpn_role:
+        file: indigo-dc.openvpn
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/kubernetes/kube_wn_install.yml
+          inputs:
+            kube_front_end_ip: { get_property: [ SELF, front_end_ip ] }
+            wn_hybrid_cluster:  { get_property: [ SELF, hybrid] }
+
+  tosca.nodes.indigo.LRMS.FrontEnd.Kubernetes:
+    derived_from: tosca.nodes.indigo.LRMS.FrontEnd
+    properties:
+      admin_username:
+        required: no
+        type: string
+        default: kubeuser
+      admin_token:
+        required: no
+        type: some_insecure_token
+    artifacts:
+      kube_role:
+        file: grycap.kubernetes
+        type: tosca.artifacts.AnsibleGalaxy.role
+      nfs_role:
+        file: indigo-dc.nfs
+        type: tosca.artifacts.AnsibleGalaxy.role
+      openvpn_role:
+        file: indigo-dc.openvpn
+        type: tosca.artifacts.AnsibleGalaxy.role
+    capabilities:
+        lrms:
+          type: tosca.capabilities.indigo.LRMS.Kubernetes
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/kubernetes/kube_fe_install.yml
+          inputs:
+            kube_front_end_ip: { get_attribute: [ HOST, private_address, 0 ] }
+            fe_hybrid_cluster:  { get_property: [ SELF, hybrid] }
+            kube_admin_username:  { get_property: [ SELF, admin_username] }
+            kube_admin_token:  { get_property: [ SELF, admin_token] }
+
+  tosca.nodes.indigo.JupyterHub:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      spawner:
+        required: no
+        type: string
+        default: local
+        constraints:
+        - valid_values: [ local, kubernetes ]
+      authenticator:
+        required: no
+        type: string
+        default: local
+        constraints:
+        - valid_values: [ local, dummy ]
+    artifacts:
+      kube_role:
+        file: indigo-dc.jupyterhub
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/jupyter/jupyterhub_install.yml
+          inputs:
+            jupyterhub_spawner: { get_property: [ SELF, spawner ] }
+            jupyterhub_authenticator: { get_property: [ SELF, spawner ] }
